[gd_scene load_steps=24 format=2]

[ext_resource path="res://addons/godot-xr-tools/objects/Object_pickable.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/weapons/M1911/m1911.gd" type="Script" id=2]
[ext_resource path="res://models/weapons/Magazine/Magazine_mesh.tres" type="CubeMesh" id=3]
[ext_resource path="res://sounds/freesound.org/344142__brokenphono__gunshot-002.wav" type="AudioStream" id=4]
[ext_resource path="res://models/weapons/Casing/Casing.tscn" type="PackedScene" id=5]
[ext_resource path="res://sounds/freesound.org/154934__klawykogut__empty-gun-shot.wav" type="AudioStream" id=6]
[ext_resource path="res://models/weapons/M1911/M1911.dae" type="PackedScene" id=7]
[ext_resource path="res://sounds/freesound.org/171614__pjkasinski3__mag-reload-1.wav" type="AudioStream" id=8]
[ext_resource path="res://UI/Ammo_count.tscn" type="PackedScene" id=9]
[ext_resource path="res://models/effects/Smoke.tscn" type="PackedScene" id=10]
[ext_resource path="res://models/effects/jkm_muzzleflash/muzzleflash.obj" type="ArrayMesh" id=11]
[ext_resource path="res://models/effects/jkm_muzzleflash/muzzleflash.png" type="Texture" id=12]


[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.00950792, 0.068903, 0.120686 )

[sub_resource type="SphereShape" id=2]
radius = 0.0182099

[sub_resource type="QuadMesh" id=3]
size = Vector2( 0.03, 0.03 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Ammo_count_viewport")

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
albedo_texture = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_cull_mode = 2
albedo_texture = ExtResource( 12 )

[sub_resource type="SphereMesh" id=7]
radius = 0.01
height = 0.02

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 0.513726 )

[sub_resource type="Animation" id=9]
length = 0.34
tracks/0/type = "value"
tracks/0/path = NodePath("EmptyAudio:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
length = 0.35
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Gun/Armature/Skeleton/slidetrigger:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0944163, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 4.22213e-07, -4.82956, 7.86836e-07 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 15, 0, -10 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_emit_casing"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GunShotAudio:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:rumble")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Pivot/MuzzleFlash:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.04, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Pivot/Flash:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.04, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Gun_load_point/Magazine:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Gun_load_point/Magazine:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.0373511, -3.72529e-09 ), Vector3( 0, 0.0450107, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MagReloadAudio:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="M1911" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
casing = ExtResource( 5 )
smoke = ExtResource( 10 )
rumble = 1.045

[node name="CollisionShape" parent="." index="0"]
shape = SubResource( 1 )

[node name="Pivot" type="Spatial" parent="." index="1"]
transform = Transform( 0.99957, 0.0293173, 0, -0.029289, 0.998603, -0.0439681, -0.00128903, 0.0439492, 0.999033, 0, 0, 0.2 )

[node name="Gun" parent="Pivot" index="0" instance=ExtResource( 7 )]
transform = Transform( -0.007, 0, -6.11959e-10, 0, 0.007, 0, 6.11959e-10, 0, -0.007, 0, 0, -0.2 )

[node name="slidetrigger" parent="Pivot/Gun/Armature/Skeleton" index="0"]
transform = Transform( 1, 7.10543e-15, -6.77626e-21, -7.10543e-15, 1, -4.26326e-14, -8.47033e-21, 4.26326e-14, 1, -3.10762e-08, 0.35547, -5.79135e-08 )

[node name="gunbody" parent="Pivot/Gun" index="1"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, -0.0112526, 7.84257, 13.2187 )

[node name="Casing_spawn_point" type="Spatial" parent="Pivot" index="1"]
transform = Transform( 0.804399, -0.594089, 0, 0.594089, 0.804399, 0, 0, 0, 1, 0.0143872, 0.0733737, -0.573652 )

[node name="Smoke_spawn_point" type="Spatial" parent="Pivot" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0544843, -0.318008 )

[node name="Gun_load_point" type="Area" parent="Pivot" index="3"]
transform = Transform( 1, 0, 0, 0, 0.951391, 0.307987, 0, -0.307987, 0.951391, 0, -0.0732738, -0.111915 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="Pivot/Gun_load_point" index="0"]
shape = SubResource( 2 )

[node name="Magazine" type="MeshInstance" parent="Pivot/Gun_load_point" index="1"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0450107, 0 )
visible = false
mesh = ExtResource( 3 )
material/0 = null

[node name="Display_ammo_count" type="MeshInstance" parent="Pivot" index="4"]
transform = Transform( 1, 0, 1.74845e-07, -7.77684e-08, 0.895638, 0.444783, -1.56598e-07, -0.444783, 0.895638, -0.0322991, 0.0550226, -0.139643 )
mesh = SubResource( 3 )
material/0 = SubResource( 5 )

[node name="MuzzleFlash" type="MeshInstance" parent="Pivot" index="5"]
transform = Transform( 0.2, 8.07632e-10, -2.91038e-11, -8.07632e-10, 0.2, 2.00876e-25, 2.91038e-11, 1.17526e-19, 0.2, 8.67905e-05, 0.0510342, -0.407583 )
visible = false
material_override = SubResource( 6 )
cast_shadow = 0
mesh = ExtResource( 11 )
material/0 = null
material/1 = null
material/2 = null

[node name="Flash" type="OmniLight" parent="Pivot" index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0552819, -0.365987 )
visible = false

[node name="Aim" type="RayCast" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0540342, -0.139601 )
enabled = true
cast_to = Vector3( 0, 0, -100 )
collision_mask = 6

[node name="Target_dot" type="MeshInstance" parent="Aim" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.201355 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
anims/EmptyClick = SubResource( 9 )
anims/Fire = SubResource( 10 )
anims/Load = SubResource( 11 )

[node name="GunShotAudio" type="AudioStreamPlayer3D" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0558502, -0.114175 )
stream = ExtResource( 4 )
unit_db = -20.0
max_distance = 1000.0
bus = "_Gunshots"

[node name="EmptyAudio" type="AudioStreamPlayer3D" parent="." index="5"]
stream = ExtResource( 6 )
unit_db = -20.0
bus = "_Gunshots"

[node name="MagReloadAudio" type="AudioStreamPlayer3D" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0709215, 0.0894946 )
stream = ExtResource( 8 )
unit_db = -20.0
bus = "_Gunshots"

[node name="Ammo_count_viewport" type="Viewport" parent="." index="7"]
size = Vector2( 256, 256 )
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 1

[node name="Ammo_count" parent="Ammo_count_viewport" index="0" instance=ExtResource( 9 )]
[connection signal="body_entered" from="Pivot/Gun_load_point" to="." method="_on_Gun_load_point_body_entered"]

[editable path="Pivot/Gun"]
